src/wayland/colormanagement_v1.h
@@ -5,6 +5,7 @@
 */
 #pragma once
 #include "core/colorspace.h"
+#include "surface.h"
 
 #include "wayland/qwayland-server-color-management-v1.h"
 #include <QObject>
@@ -106,22 +107,24 @@ private:
 class ImageDescriptionV1 : private QtWaylandServer::wp_image_description_v1
 {
 public:
-    static ImageDescriptionV1 *createReady(wl_client *client, uint32_t id, uint32_t version, const std::shared_ptr<ColorDescription> &color);
+    static ImageDescriptionV1 *createReady(wl_client *client, uint32_t id, uint32_t version, const std::shared_ptr<ColorDescription> &color, ColorDescriptionType type);
     static ImageDescriptionV1 *createFailed(wl_client *client, uint32_t id, uint32_t version, wp_image_description_v1_cause error, const QString &message);
 
     const std::optional<std::shared_ptr<ColorDescription>> &description() const;
+    ColorDescriptionType type() const;
 
     static ImageDescriptionV1 *get(wl_resource *resource);
     static uint64_t s_idCounter;
 
 private:
-    explicit ImageDescriptionV1(wl_client *client, uint32_t id, uint32_t version, const std::optional<std::shared_ptr<ColorDescription>> &color);
+    explicit ImageDescriptionV1(wl_client *client, uint32_t id, uint32_t version, const std::optional<std::shared_ptr<ColorDescription>> &color, ColorDescriptionType type);
 
     void wp_image_description_v1_destroy_resource(Resource *resource) override;
     void wp_image_description_v1_destroy(Resource *resource) override;
     void wp_image_description_v1_get_information(Resource *resource, uint32_t information) override;
 
     const std::optional<std::shared_ptr<ColorDescription>> m_description;
+    const ColorDescriptionType m_type;
 };
 
 class ColorManagementOutputV1 : public QObject, private QtWaylandServer::wp_color_management_output_v1
